# BDiF_final-Test

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  asda.txt  cmake_install.cmake  data_temp.txt  log  logfile.txt  main.cpp  main.h  mpitest  noise_data.txt  normtest.txt  ppppp.txt  readme.txt
