cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
SET(GCC_COVERAGE_LINK_FLAGS "-pthread -Wl,-rpath -Wl,/usr/local/lib -L/usr/local/lib -lmpi_cxx -lmpi -lopen-rte -lopen-pal -lutil -lmca_common_sm -lvt -Wl")
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )

PROJECT(option)
set(common_mod_path "../common")
set(boost_home "/Users/zhuchao1/Documents/boost_1_60_0")
FILE(GLOB SOURCE "./main.cpp")
INCLUDE_DIRECTORIES("/usr/local/include" ${boost_home} ${common_path} "../")
LINK_DIRECTORIES("/usr/local/lib" "${boost_home}/stage/lib")
SET(LIBS ${LIBS} "/usr/local/lib/*.so")
#find_package(GSL REQUIRED)
#include_directories(${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS})
#set(LIBS ${LIBS} ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#link_libraries(${LIBS})
add_executable(mpitest ${SOURCE} main.h)
target_link_libraries(mpitest boost_date_time)
#target_link_libraries(optest ${LIBS})
