cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
PROJECT(option)
find_package(MPI REQUIRED)

find_package(Boost 1.56 REQUIRED COMPONENTS date_time)
include_directories(${MPI_INCLUDE_DIR})
include_directories(${Boost_INCLUDE_DIR})

#find_package(GSL REQUIRED)
#include_directories(${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS})
#set(LIBS ${LIBS} ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#link_libraries(${LIBS})
add_executable(mpitest main.h main.cpp)
target_link_libraries(mpitest ${Boost_LIBRARIES} ${MPI_LIBRARIES})
#target_link_libraries(optest ${LIBS})
